--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "license": "UNLICENSED",
    "dependencies": {
       "aws-sdk": "^2.989.0",
-      "jimp": "^0.16.1"
+      "jimp": "^0.16.1",
+      "jpeg-autorotate": "^8.0.1"
    }
 }
